implement resposive design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Website</title>
+    <title>Travel Blog Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,9 +19,9 @@
   </head>
   <body>
     <section class="header">
-      <p class="roboto-light-italic text-underline">Subscribe</p>
-      <h1 class="roboto-bold text-underline">Blog Title</h1>
-      <i class="fa-solid fa-magnifying-glass"></i>
+      <a class="roboto-light-italic" href="#">Subscribe</a>
+      <h1 class="roboto-bold text-underline">TravelBee</h1>
+      <i class="fa-solid fa-magnifying-glass search-icon"></i>
     </section>
     <section class="main">
       <div class="post-card-container">
@@ -33,13 +33,15 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
+        <a class="post-card-continue-reading text-underline" href="./blog.html"
           >Continue reading</a
         >
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -52,7 +54,9 @@
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -65,7 +69,9 @@
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -78,7 +84,9 @@
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -91,7 +99,9 @@
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -104,7 +114,9 @@
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -117,7 +129,9 @@
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
-          <h3 class="post-card-category roboto-medium category-design">Design</h3>
+          <h3 class="post-card-category roboto-medium category-design">
+            Design
+          </h3>
           <h2 class="post-card-title roboto-bold">Post title</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
           <p class="post-card-excerpt roboto-regular">
@@ -129,6 +143,9 @@
         >
       </div>
     </section>
-    <section class="footer"></section>
+    <section class="footer roboto-medium">
+      <p>Blog template built for <a href="#">Bootstrap</a></p>
+      <a href="#">See Design System</a>
+    </section>
   </body>
 </html>
