fix comments at index.html

--- a/blog.html
+++ b/blog.html
@@ -14,21 +14,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="typograhpy.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
     <section class="header">
-      <a class="roboto-light-italic" href="#">Subscribe</a>
+      <a class="roboto-light-italic" href="/">Back</a>
       <h1 class="roboto-bold text-underline">TravelBee</h1>
       <i class="fa-solid fa-magnifying-glass search-icon"></i>
     </section>
     <section class="blog-detail-main">
       <div class="blog-detail-left">
-        <div class="blog-image">
-          <img src="./assets/travel.jpg" alt="nature" />
-          <p class="image-caption roboto-medium">Travel with me</p>
-        </div>
+        <figure class="blog-image">
+          <img src="assets/images/travel.jpg" alt="nature" />
+          <figcaption>Fig.1 - Travel with me</figcaption>
+        </figure>
         <div class="blog-detail-title">
           <h2 class="roboto-medium text-large">Sample Blog Post</h2>
           <span class="roboto-medium text-grey text-small">
@@ -36,11 +35,11 @@
           </span>
         </div>
         <div class="short-description">
-          <p class="roboto-regular">
+          <q class="roboto-regular">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque,
             mollitia. Nulla, corporis vitae corrupti nam suscipit saepe sint
             sapiente officiis ad repudiandae.
-          </p>
+          </q>
         </div>
         <div class="mock-content">
           <p class="roboto-regular">
@@ -93,13 +92,19 @@
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
           </ul>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus in adip.</p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus in
+            adip.
+          </p>
           <ol>
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
             <li>Lorem ipsum dolor sit amet</li>
           </ol>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis adipisci labore</p>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Perspiciatis adipisci labore
+          </p>
         </div>
         <div class="buttons">
           <button class="btn btn-active">Older Post</button>
