--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="typograhpy.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
   </head>
   <body>
     <section class="header">
@@ -26,6 +25,11 @@
     <section class="main">
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-1.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-world">World</h3>
           <h2 class="post-card-title roboto-bold">Example Blog Post</h2>
           <p class="post-card-date roboto-medium">Nov 12</p>
@@ -33,12 +37,21 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="./blog.html"
-          >Continue reading</a
-        >
+        <button>
+          <a
+            class="post-card-continue-reading text-underline"
+            href="./blog.html"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-3.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -48,12 +61,19 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-1.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -63,12 +83,19 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-3.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -78,12 +105,19 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-1.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -93,12 +127,19 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-3.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -108,12 +149,19 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-1.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -123,12 +171,19 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
       <div class="post-card-container">
         <div class="post-card-main">
+          <img
+            src="assets/images/post-1.jpg"
+            alt="Trulli"
+            style="width: 100%"
+          />
           <h3 class="post-card-category roboto-medium category-design">
             Design
           </h3>
@@ -138,9 +193,11 @@
             This card represents an example blog post.
           </p>
         </div>
-        <a class="post-card-continue-reading text-underline" href="#"
-          >Continue reading</a
-        >
+        <button>
+          <a class="post-card-continue-reading text-underline" href="#"
+            >Continue reading</a
+          >
+        </button>
       </div>
     </section>
     <section class="footer roboto-medium">
