update Blog detail page

--- a/blog.html
+++ b/blog.html
@@ -26,20 +26,40 @@
       <div class="blog-detail-left">
         <figure class="blog-image">
           <img src="assets/images/travel.jpg" alt="nature" />
-          <figcaption>Fig.1 - Travel with me</figcaption>
+          <figcaption>Travel with me</figcaption>
         </figure>
         <div class="blog-detail-title">
           <h2 class="roboto-medium text-large">Sample Blog Post</h2>
           <span class="roboto-medium text-grey text-small">
-            January 1, 2024 by <a href="#">Mark</a>
+            January 1, 2024
           </span>
         </div>
+        <div class="blog-author">
+          <div class="avatar">
+            <img src="assets/images/avatar.jpg" alt="woman" />
+            <div class="author-about">
+              <h2 class="roboto-medium">Emily Carter</h2>
+              <span class="roboto-light"
+                >Senior Content Writer at Imaginative Ink</span
+              >
+            </div>
+          </div>
+        </div>
         <div class="short-description">
-          <q class="roboto-regular">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque,
-            mollitia. Nulla, corporis vitae corrupti nam suscipit saepe sint
-            sapiente officiis ad repudiandae.
-          </q>
+          <p class="roboto-regular">
+            Emily Carter is a seasoned wordsmith with over a decade of
+            experience captivating audiences through the written word.
+            Currently, as a Senior Content Writer at Imaginative Ink, she crafts
+            compelling narratives, informative articles, and engaging content
+            strategies for various platforms. A graduate of the Iowa Writers'
+            Workshop, her passion for storytelling and her commitment to
+            literary excellence have been the cornerstones of her career.
+            Emily's articles and essays, often characterized by their lyrical
+            prose and insightful analysis, have been featured in several
+            high-profile publications. When not lost in a world of metaphors and
+            synonyms, she mentors young writers and takes part in literary
+            workshops, hoping to inspire the next generation of creative minds.
+          </p>
         </div>
         <div class="mock-content">
           <p class="roboto-regular">
@@ -61,12 +81,12 @@
         </div>
         <div class="post-heading roboto-regular">
           <h2 class="text-large">Heading</h2>
-          <p>
+          <q>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta
             optio ex sapiente provident, repellendus totam alias dolor possimus
             tempora, corporis voluptates quibusdam. Harum, aspernatur
             praesentium. Sint suscipit nostrum ad doloremque!
-          </p>
+          </q>
         </div>
         <div class="post-heading roboto-regular">
           <h2 class="text-large">Sub-heading</h2>
