--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/index.css" />
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <section class="header">
